--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,29 @@
 <html>
 {% include head.html %}
 <body>
-	{{content}}
+	<div class="bleed">
+		<div class="container">		
+			<div class="header">
+				<div class="title-container">
+					<h1 class="site-title">{{ site.title }}</h1>
+				</div>
+				<div class="nav-container">
+					<nav>
+						<ul>
+							<li class="menu-item"><a href="#">Collection</a></li>
+							<li class="menu-item"><a href="#">Stores</a></li>
+							<li class="menu-item"><a href="#">Press</a></li>
+							<li class="menu-item"><a href="#">About</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+			<div class="content">
+				{{content}}
+			</div>
+			<div class="footer">
+			</div>
+		</div>
+	</div>
 </body>
 </html>
