--- a/_includes/head.html
+++ b/_includes/head.html
@@ -102,4 +102,5 @@
     <link rel="stylesheet" type="text/css" href="css/build/global.css">
     <!-- Scripts -->
     <script type="text/javascript" src="js/build/production.min.js"></script>
+    <script type="text/javascript" src="js/global.js"></script>
 </head>
