--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,68 +2,7 @@
 <html>
 {% include head.html %}
 <body>
-<header class="navigation">
-  <div class="navigation-wrapper">
-    <a href="javascript:void(0)" class="logo">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="">
-    </a>
-    <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
-    <div class="nav">
-      <ul id="navigation-menu">
-        <li class="nav-link"><a href="javascript:void(0)">Collection</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">About Us</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-</header>
-<div class="hero">
-	<div class="hero-inner">
-   		<a href="" class="hero-logo">
-   			<img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt=""></a>
-			<div class="hero-copy">
-				<h1>Short description of Product</h1>
-				<p>A few reasons why this product is worth using, who it's for and why they need it.</p>	
-			</div>
-		<button>Learn More</button>
-	</div>
-</div>
-<div class="content">
-	{{ content }}
-</div>
-<!--<div class="wrapper-for-content-outside-of-footer">
-   Uncomment this whole section for a sticky footer. The content of the page should be inside of this .wrapper-for-content-outside-of-footer
-  <div class="push"></div>
-</div>-->
-<footer class="footer-2">
-  <div class="footer-logo">
-    <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="">
-  </div>
-    <ul>
-      <li><a href="javascript:void(0)">About</a></li>
-      <li><a href="javascript:void(0)">Contact</a></li>
-      <li><a href="javascript:void(0)">Products</a></li>
-    </ul>
-
-    <div class="footer-secondary-links">
-      <ul>
-        <li><a href="javascript:void(0)">Terms and Conditions</a></li>
-        <li><a href="javascript:void(0)">Privacy Policy</a></li>
-      </ul>
-
-      <ul class="footer-social">
-        <li><a href="javascript:void(0)">
-          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/facebook-logo-circle.png" alt="">
-          </a></li>
-        <li><a href="javascript:void(0)">
-          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/twitter-logo-circle.png" alt="">
-        </a></li>
-        <li><a href="javascript:void(0)">
-          <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/youtube-logo-circle.png" alt="">
-        </a></li>
-      </ul>
-    </div>
-</footer>
+{% include nav.html %}
 
 </body>
 </html>
