--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,14 +1,15 @@
 <header class="navigation">
   <div class="navigation-wrapper">
     <a href="javascript:void(0)" class="logo">
-      <img src="https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/placeholder_logo_1.png" alt="">
+      <img src="/images/logo.svg" alt="">
     </a>
     <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
     <div class="nav">
       <ul id="navigation-menu">
-        <li class="nav-link"><a href="javascript:void(0)">Products</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">About Us</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">Contact</a></li>
+        <li class="nav-link"><a href="javascript:void(0)">Collection</a></li>
+        <li class="nav-link"><a href="javascript:void(0)">Stores</a></li>
+        <li class="nav-link"><a href="javascript:void(0)">Press</a></li>
+        <li class="nav-link"><a href="javascript:void(0)">About</a></li>
       </ul>
     </div>
   </div>
