--- a/css/0-plugins/base/_variables.scss
+++ b/css/0-plugins/base/_variables.scss
@@ -1,8 +1,8 @@
 // Typography
-$sans-serif: $helvetica;
+$sans-serif: $futura;
 $serif: $georgia;
 $base-font-family: $sans-serif;
-$header-font-family: $base-font-family;
+$header-font-family: $futura;
 
 // Sizes
 $base-font-size: 1em;
@@ -51,3 +51,7 @@ $form-box-shadow: inset 0 1px 3px rgba(0,0,0,0.06);
 $form-box-shadow-focus: $form-box-shadow, 0 0 5px rgba(darken($form-border-color-focus, 5), 0.7);
 $form-font-size: $base-font-size;
 $form-font-family: $base-font-family;
+
+
+// Custom variables
+$home-default-image: "/images/le_bg_04.jpg";
