--- a/css/0-plugins/base/_grid-settings.scss
+++ b/css/0-plugins/base/_grid-settings.scss
@@ -9,8 +9,9 @@ $max-width: em(1088);
 // Neat Breakpoints
 $medium-screen: em(640);
 $large-screen: em(860);
-
+$xlarge-screen: em(1088);
 
 $medium-screen-up: new-breakpoint(min-width $medium-screen 12);
 $large-screen-up: new-breakpoint(min-width $large-screen 12);
+$xlarge-screen-up: new-breakpoint(min-width $xlarge-screen 12);
 $mobile-display: new-breakpoint(max-width $medium-screen 4);
