--- a/css/2-modules/nav.scss
+++ b/css/2-modules/nav.scss
@@ -1,9 +1,9 @@
 header.navigation {
   $navigation-padding: 1em;
-  $navigation-background: $dark-gray;
-  $navigation-color: transparentize(white, 0.3);
+  $navigation-background: transparentize(black, 0.5);;
+  $navigation-color: transparentize(white, 0.25);
   $navigation-color-hover: white;
-  $navigation-height: 60px;
+  $navigation-height: 80px;
   $navigation-nav-button-background: $base-accent-color;
   $navigation-nav-button-background-hover: lighten($navigation-background, 10);
   $navigation-nav-button-border: 1px solid lighten($navigation-nav-button-background, 20);
@@ -14,8 +14,12 @@ header.navigation {
   $navigation-submenu-width: 12em;
   $horizontal-bar-mode: $large-screen;
 
+  $navigation-font-size: $base-font-size * 1.125;
+  $navigation-letter-spacing: 3px;
+  $navigation-font-weight: 300;
+
   background-color: $navigation-background;
-  border-bottom: 1px solid darken($navigation-background, 10);
+  //border-bottom: 1px solid lighten($navigation-background, 10);
   height: $navigation-height;
   width: 100%;
   z-index: 999;
@@ -45,12 +49,14 @@ header.navigation {
     color: $navigation-color;
     display: block;
     float: right;
-    font-family: $sans-serif;
-    font-weight: 700;
+    font-family: $futura;
+    font-weight: $navigation-font-weight;
     line-height: $navigation-height;
+    font-size: $navigation-font-size;
     margin: 0;
     padding-right: 1em;
     text-transform: uppercase;
+    letter-spacing: $navigation-letter-spacing;
 
     @include media ($horizontal-bar-mode) {
       display: none;
@@ -67,7 +73,7 @@ header.navigation {
     z-index: 9999999;
     float: none;
     @include media ($horizontal-bar-mode) {
-      float: left;
+      float: right;
     }
   }
 
@@ -111,7 +117,10 @@ header.navigation {
     a {
       color: $navigation-color;
       display: inline-block;
-      font-weight: 400;
+      font-weight: $navigation-font-weight;
+      text-transform: uppercase;
+      letter-spacing: $navigation-letter-spacing;
+      font-size: $navigation-font-size;
 
       @include media ($horizontal-bar-mode) {
         padding-right: 1em;
