--- a/css/0-plugins/plugins-dir.scss
+++ b/css/0-plugins/plugins-dir.scss
@@ -1,4 +1,5 @@
 @import "normalize.css";
+@import "font-awesome/font-awesome";
 @import "bourbon/bourbon";
 @import "base/base";
 @import "neat/neat";
