--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -5,15 +5,32 @@
 <div class="backstretch">
 	{% include nav.html %}
 </div>
+<div class="controls">
+	<a href="" id="left"><i class="fa fa-angle-left"></i></a>
+	<!-- <i class="fa fa-square-o"></i> -->
+	<a href="" id="right"><i class="fa fa-angle-right"></i></a>
+</div>
+{% if page.gallery %}
 <script type="text/javascript">
     $.backstretch([
-      "/images/collection_01.jpg",
-      "/images/collection_02.jpg",
-      "/images/collection_03.jpg"
-      ], {
+    	{% for slides in page.gallery %}
+    	"{{slides.image}}",
+    	{% endfor %} ], {
         fade: 750,
         duration: 4000
     });
+    // Pause the slideshow
+	$("#left").click(function (e) {
+        e.preventDefault();
+	    $.backstretch("prev");
+	});
+	    
+	$("#right").click(function (e) {
+        e.preventDefault();
+	    $.backstretch("next");
+	});
+
 </script>
+{% endif %}
 </body>
 </html>
