Added basic content
Added in basic page content for styling. There are now pages for about,
press, and stores. Also updated default layout which will control these
page templates.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,15 +1,15 @@
 <header class="navigation">
   <div class="navigation-wrapper">
-    <a href="javascript:void(0)" class="logo">
+    <a href="/" class="logo">
       <img src="/images/logo.svg" alt="">
     </a>
     <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
     <div class="nav">
       <ul id="navigation-menu">
-        <li class="nav-link"><a href="javascript:void(0)">Collection</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">Stores</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">Press</a></li>
-        <li class="nav-link"><a href="javascript:void(0)">About</a></li>
+        <li class="nav-link"><a href="collection.html">Collection</a></li>
+        <li class="nav-link"><a href="stores.html">Stores</a></li>
+        <li class="nav-link"><a href="press.html">Press</a></li>
+        <li class="nav-link"><a href="about.html">About</a></li>
       </ul>
     </div>
   </div>
