--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,9 @@
 {% include head.html %}
 <body>
 {% include nav.html %}
-
+<div class="content">
+	<h2>{{page.title}}</h2>
+	{{content}}
+</div>
 </body>
 </html>
