--- a/css/2-modules/nav.scss
+++ b/css/2-modules/nav.scss
@@ -1,9 +1,9 @@
 header.navigation {
-  $navigation-padding: 1em;
+  $navigation-padding: 2em;
   $navigation-background: transparentize(black, 0.5);;
   $navigation-color: transparentize(white, 0.25);
   $navigation-color-hover: white;
-  $navigation-height: 80px;
+  $navigation-height: 70px;
   $navigation-nav-button-background: $base-accent-color;
   $navigation-nav-button-background-hover: lighten($navigation-background, 10);
   $navigation-nav-button-border: 1px solid lighten($navigation-nav-button-background, 20);
@@ -12,7 +12,7 @@ header.navigation {
   $navigation-active-link-color: transparentize(white, 0.5);
   $navigation-submenu-padding: 1em;
   $navigation-submenu-width: 12em;
-  $horizontal-bar-mode: $large-screen;
+  $horizontal-bar-mode: $medium-screen;
 
   $navigation-font-size: $base-font-size * 1.125;
   $navigation-letter-spacing: 3px;
@@ -38,10 +38,17 @@ header.navigation {
     padding-right: 2em;
     z-index: 1000;
 
-    img {
+    svg {
       max-height: $navigation-height;
-      padding: .8em 0;
+      padding: .25em 0;
+      max-width: 25px;
+      opacity: 0.75;
+      @include transition(opacity 0.1s linear 0s);
     }
+    svg:hover {
+      opacity: 1;
+    }
+
   }
 
   // Mobile view
