Add and style content
Building out text-based pages now

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
 <body>
 {% include nav.html %}
 <div class="content">
-	<h2>{{page.title}}</h2>
-	{{content}}
+	<article>
+		{{content}}
+	</article>
 </div>
 </body>
 </html>
