--- a/css/0-plugins/base/_typography.scss
+++ b/css/0-plugins/base/_typography.scss
@@ -5,6 +5,7 @@ body {
   font-family: $base-font-family;
   font-size: $base-font-size;
   line-height: $unitless-line-height;
+  font-weight: $body-font-weight;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -12,6 +13,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: $header-line-height;
   margin: 0;
   text-rendering: optimizeLegibility; // Fix the character spacing for headings
+  font-weight: $header-font-weight;
 }
 
 h1 {
