--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 {% include head.html %}
-<body>
+<body class="m-scene" id="main">
 {% include nav.html %}
 <div class="content">
-	<article>
+	<article class="scene_element scene_element--fadein">
 		<h1>{{page.title}}</h1>
 		{% if page.callout %}
 			<h2>{{page.callout}}</h2>
