--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 {% include head.html %}
-<body class="home">
+<body class="home m-scene" id="main">
   {% if page.gallery %}
     <ul class="image-list">
       {% for slides in page.gallery %}
@@ -9,11 +9,11 @@
       {% endfor %}
     </ul>
   {% endif %}
-<div class="bleed">
+<div class="bleed scene_element scene_element--fadein">
   {% include nav.html %}
   <div class="content">
     <div class="header-container">
-      <h1>{{site.title}}</h1>
+      <h1 class="scene_element scene_element--fadeinafter">{{site.title}}</h1>
     </div>
   </div>
 </div>
