--- a/css/0-plugins/plugins-dir.scss
+++ b/css/0-plugins/plugins-dir.scss
@@ -1,4 +1,4 @@
-@import "normalize.css";
+@import "normalize.scss";
 @import "font-awesome/font-awesome";
 @import "bourbon/bourbon";
 @import "base/base";
