--- a/css/2-modules/nav.scss
+++ b/css/2-modules/nav.scss
@@ -19,7 +19,7 @@ header.navigation {
   $navigation-font-weight: 300;
 
   background-color: $navigation-background;
-  //border-bottom: 1px solid lighten($navigation-background, 10);
+  // border-bottom: 1px solid lighten($navigation-background, 10);
   height: $navigation-height;
   width: 100%;
   z-index: 999;
@@ -141,7 +141,7 @@ header.navigation {
   }
 
   .active-nav-item a {
-    padding-bottom: 3px;
+    // padding-bottom: 3px;
   }
 
   // Sub menus
@@ -154,7 +154,8 @@ header.navigation {
     }
 
     > ul > li:first-child a  {
-      padding-top: 1em;
+      // padding-top: 1em;
+      margin-top: 1.1em;
     }
 
     a {
@@ -227,26 +228,32 @@ header.navigation {
       display: block;
       padding-right: 0;
 
+      // fix a weird 1px gap on last item - rendering bug
+      &:last-child > a {
+        margin-top: -1px;
+      }
+
       @include media($horizontal-bar-mode) {
         line-height: $navigation-height / 1.3;
 
         &:first-child > a {
-          border-top-left-radius: $base-border-radius;
-          border-top-right-radius: $base-border-radius;
+          // border-top-left-radius: $base-border-radius;
+          // border-top-right-radius: $base-border-radius;
         }
 
         &:last-child > a {
           border-bottom-left-radius: $base-border-radius;
           border-bottom-right-radius: $base-border-radius;
-          padding-bottom: .7em;
+          // padding-bottom: .7em;
         }
       }
 
       a {
-        background-color: darken($navigation-background, 3);
         display: inline-block;
         text-align: right;
         width: 100%;
+        margin-top: 0px;
+        margin-bottom: 0px;
 
         @include media($horizontal-bar-mode) {
           background-color: $navigation-background;
@@ -254,101 +261,6 @@ header.navigation {
           text-align: left;
           width: $navigation-submenu-width;
         }
-      }
-    }
-  }
-
-  // Elements on the far right
-
-  .navigation-tools {
-    @include clearfix;
-    display: block;
-    padding-right: $navigation-padding;
-    padding-left: $navigation-padding/2;
-    clear: both;
-    background: #505050;
-
-    @include media($large-screen) {
-      background: transparent;
-      float: right;
-      clear: none;
-    }
-  }
-
-  a.sign-up {
-    margin-top: 1.2em;
-    float: right;
-    @include transition (all 0.2s ease-in-out);
-    display: inline;
-    background: $navigation-nav-button-background;
-    border-radius: $base-border-radius; 
-    color: white;
-    font-size: .8em;  
-    font-weight: 800;
-    text-transform: uppercase;
-    padding: .4em .5em;
-
-    @include media($large-screen) {
-      padding: .5em 1em;
-    }
-
-    &:hover {
-      background: lighten($navigation-nav-button-background, 10);
-    }
-  }
-
-  // Search bar
-
-  .search-bar {
-    $search-bar-border-color: $base-border-color;
-    $search-bar-border: 1px solid $search-bar-border-color;
-    $search-bar-background: lighten($search-bar-border-color, 10);
-
-    padding: .85em .6em; 
-    float: left;
-    .search-and-submit {
-      position: relative;
-
-      input[type=search] {
-        background: $navigation-search-background;
-        border: $navigation-search-border;
-        padding: .6em .8em;
-        font-size: .9em;
-        font-style: italic;
-        color: $navigation-color;
-        border-radius: $base-border-radius * 2;
-        margin: 0;
-
-        @include media($large-screen) {
-          width: 100%;
-        }
-      }
-
-      button[type=submit] {
-        @include button(simple, lighten($navigation-search-background, 10));
-        position: absolute;
-        top: 0.3em;
-        right: 0.3em;
-        bottom: 0.3em;
-        left: auto;
-        outline: none;
-        padding: 0 15px;
-
-        img {
-          height: 12px;
-          opacity: .7;
-        }
-      }
-    }
-
-    @include media($horizontal-bar-mode) {
-      width: 16em;
-      position: relative; 
-      display: inline-block;
-
-      input {
-        @include box-sizing(border-box);
-        display: block;
       }
     }
   }
