--- a/css/3-layouts/page.scss
+++ b/css/3-layouts/page.scss
@@ -62,7 +62,7 @@
 		}
 
 		p {
-			font-family: $serif;
+			font-family: $sans-serif;
 			line-height: 1.5em;
 			font-size: 1.15em;
 			margin-bottom: 1.5em;
