--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,7 +24,13 @@
       <ul id="navigation-menu">
         <li class="nav-link"><a href="collection.html">Collection</a></li>
         <li class="nav-link"><a href="stores.html">Stores</a></li>
-        <li class="nav-link"><a href="about.html">About</a></li>
+        <li class="nav-link more"><a href="javascript:void(0)">About</a>
+          <ul class="submenu">
+            <li><a href="mission.html">Mission</a></li>
+            <li><a href="bio.html">Bio</a></li>
+            <li><a href="press.html">Press</a></li>
+          </ul>
+        </li>
       </ul>
     </div>
   </div>
