--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -22,11 +22,13 @@
     // Pause the slideshow
 	$("#left").click(function (e) {
         e.preventDefault();
+        // $.backstretch("cachePrev");
 	    $.backstretch("prev");
 	});
 	    
 	$("#right").click(function (e) {
         e.preventDefault();
+        // $.backstretch("cacheNext");
 	    $.backstretch("next");
 	});
 
