--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <header class="navigation">
   <div class="navigation-wrapper">
-    <a href="/" class="logo">
+    <a href="/" id="logo">
         <svg version="1.1" id="Layer_0_xA0_Image_1_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
    x="0px" y="0px" width="136px" height="320px" viewBox="0 0 136 320" enable-background="new 0 0 136 320" xml:space="preserve">
 <path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M97.898,218.004c7.315-19.92,12.375-40.271,14.08-61.51
@@ -26,7 +26,7 @@
         <li class="nav-link"><a href="stores.html">Stores</a></li>
         <li class="nav-link more"><a href="javascript:void(0)">About</a>
           <ul class="submenu">
-            <li><a href="mission.html">Mission</a></li>
+            <li><a href="story.html">Story</a></li>
             <li><a href="bio.html">Bio</a></li>
             <li><a href="press.html">Press</a></li>
           </ul>
