--- a/css/0-plugins/base/_variables.scss
+++ b/css/0-plugins/base/_variables.scss
@@ -24,7 +24,7 @@ $light-green: #E6EFC2;
 $turquoise: #3faba9;
 
 // Background Color
-$base-background-color: #191919;
+$base-background-color: #222;
 
 // Font Colors
 $base-font-color: $light-gray;
@@ -57,4 +57,4 @@ $form-font-family: $base-font-family;
 
 
 // Custom variables
-$home-default-image: "/images/le_bg_04.jpg";
+$home-default-image: "/images/bracelet_blurred.jpg";
