--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,96 +11,96 @@
         @import url("http://fast.fonts.net/t/1.css?apiType=css&projectid=a308999d-8d2c-4448-ab25-4f92eb624e54");
         @font-face{
         font-family:"BT Futura W01_n2";
-        src:url("Fonts/17fe4ab4-6e45-4ea2-bb53-2123063911c3.eot?#iefix") format("eot")
+        src:url("{{ site.baseurl }}/fonts/17fe4ab4-6e45-4ea2-bb53-2123063911c3.eot?#iefix") format("eot")
         }
         @font-face{
         font-family:"BT Futura W01";
-        src:url("Fonts/17fe4ab4-6e45-4ea2-bb53-2123063911c3.eot?#iefix");
-        src:url("Fonts/17fe4ab4-6e45-4ea2-bb53-2123063911c3.eot?#iefix") format("eot"),url("Fonts/142b09e6-c245-4ff7-b01c-325fa824c99e.woff") format("woff"),url("Fonts/e4509cd4-7aa0-4068-89bd-95ffd0bfb6d4.ttf") format("truetype"),url("Fonts/d37fcd2f-d43f-4eae-b192-c48028c02797.svg#d37fcd2f-d43f-4eae-b192-c48028c02797") format("svg");
+        src:url("{{ site.baseurl }}/fonts/17fe4ab4-6e45-4ea2-bb53-2123063911c3.eot?#iefix");
+        src:url("{{ site.baseurl }}/fonts/17fe4ab4-6e45-4ea2-bb53-2123063911c3.eot?#iefix") format("eot"),url("{{ site.baseurl }}/fonts/142b09e6-c245-4ff7-b01c-325fa824c99e.woff") format("woff"),url("{{ site.baseurl }}/fonts/e4509cd4-7aa0-4068-89bd-95ffd0bfb6d4.ttf") format("truetype"),url("{{ site.baseurl }}/fonts/d37fcd2f-d43f-4eae-b192-c48028c02797.svg#d37fcd2f-d43f-4eae-b192-c48028c02797") format("svg");
         font-weight: 200;
         font-style: normal;
         }
         @font-face{
         font-family:"BT Futura W01_n3";
-        src:url("Fonts/7ed1bebb-81a9-4c57-9513-f0538c1b83fc.eot?#iefix") format("eot")
+        src:url("{{ site.baseurl }}/fonts/7ed1bebb-81a9-4c57-9513-f0538c1b83fc.eot?#iefix") format("eot")
         }
         @font-face{
         font-family:"BT Futura W01";
-        src:url("Fonts/7ed1bebb-81a9-4c57-9513-f0538c1b83fc.eot?#iefix");
-        src:url("Fonts/7ed1bebb-81a9-4c57-9513-f0538c1b83fc.eot?#iefix") format("eot"),url("Fonts/ddc0f223-a296-451a-8681-ad80508eb419.woff") format("woff"),url("Fonts/c18fc865-7a4e-45d9-bbb0-4e4553cc4136.ttf") format("truetype"),url("Fonts/71710047-b807-47eb-9874-7db8f4904492.svg#71710047-b807-47eb-9874-7db8f4904492") format("svg");
+        src:url("{{ site.baseurl }}/fonts/7ed1bebb-81a9-4c57-9513-f0538c1b83fc.eot?#iefix");
+        src:url("{{ site.baseurl }}/fonts/7ed1bebb-81a9-4c57-9513-f0538c1b83fc.eot?#iefix") format("eot"),url("{{ site.baseurl }}/fonts/ddc0f223-a296-451a-8681-ad80508eb419.woff") format("woff"),url("{{ site.baseurl }}/fonts/c18fc865-7a4e-45d9-bbb0-4e4553cc4136.ttf") format("truetype"),url("{{ site.baseurl }}/fonts/71710047-b807-47eb-9874-7db8f4904492.svg#71710047-b807-47eb-9874-7db8f4904492") format("svg");
         font-weight: 300;
         font-style: normal;
         }
         @font-face{
         font-family:"BT Futura W01_i4";
-        src:url("Fonts/7397ef17-e8af-422a-8628-20c56b6f4164.eot?#iefix") format("eot")
+        src:url("{{ site.baseurl }}/fonts/7397ef17-e8af-422a-8628-20c56b6f4164.eot?#iefix") format("eot")
         }
         @font-face{
         font-family:"BT Futura W01";
-        src:url("Fonts/7397ef17-e8af-422a-8628-20c56b6f4164.eot?#iefix");
-        src:url("Fonts/7397ef17-e8af-422a-8628-20c56b6f4164.eot?#iefix") format("eot"),url("Fonts/9c22473f-1cdc-45af-91bc-009679d78ea0.woff") format("woff"),url("Fonts/58d62891-31fe-4e33-a049-c30505c1e98d.ttf") format("truetype"),url("Fonts/b13f5171-3607-40bb-8c06-412266037103.svg#b13f5171-3607-40bb-8c06-412266037103") format("svg");
+        src:url("{{ site.baseurl }}/fonts/7397ef17-e8af-422a-8628-20c56b6f4164.eot?#iefix");
+        src:url("{{ site.baseurl }}/fonts/7397ef17-e8af-422a-8628-20c56b6f4164.eot?#iefix") format("eot"),url("{{ site.baseurl }}/fonts/9c22473f-1cdc-45af-91bc-009679d78ea0.woff") format("woff"),url("{{ site.baseurl }}/fonts/58d62891-31fe-4e33-a049-c30505c1e98d.ttf") format("truetype"),url("{{ site.baseurl }}/fonts/b13f5171-3607-40bb-8c06-412266037103.svg#b13f5171-3607-40bb-8c06-412266037103") format("svg");
         font-weight: 400;
         font-style: italic;
         }
         @font-face{
         font-family:"BT Futura W01_i2";
-        src:url("Fonts/2e6cfa9e-fbb1-41ae-865f-1a1b7e472cdc.eot?#iefix") format("eot")
+        src:url("{{ site.baseurl }}/fonts/2e6cfa9e-fbb1-41ae-865f-1a1b7e472cdc.eot?#iefix") format("eot")
         }
         @font-face{
         font-family:"BT Futura W01";
-        src:url("Fonts/2e6cfa9e-fbb1-41ae-865f-1a1b7e472cdc.eot?#iefix");
-        src:url("Fonts/2e6cfa9e-fbb1-41ae-865f-1a1b7e472cdc.eot?#iefix") format("eot"),url("Fonts/34962837-192c-48f0-bd43-5bf8f325f09f.woff") format("woff"),url("Fonts/4fdf6f8e-9073-43e6-a953-6bb368860c9e.ttf") format("truetype"),url("Fonts/4cf8ca6d-6004-4831-b4a5-efd8f58a9249.svg#4cf8ca6d-6004-4831-b4a5-efd8f58a9249") format("svg");
+        src:url("{{ site.baseurl }}/fonts/2e6cfa9e-fbb1-41ae-865f-1a1b7e472cdc.eot?#iefix");
+        src:url("{{ site.baseurl }}/fonts/2e6cfa9e-fbb1-41ae-865f-1a1b7e472cdc.eot?#iefix") format("eot"),url("{{ site.baseurl }}/fonts/34962837-192c-48f0-bd43-5bf8f325f09f.woff") format("woff"),url("{{ site.baseurl }}/fonts/4fdf6f8e-9073-43e6-a953-6bb368860c9e.ttf") format("truetype"),url("{{ site.baseurl }}/fonts/4cf8ca6d-6004-4831-b4a5-efd8f58a9249.svg#4cf8ca6d-6004-4831-b4a5-efd8f58a9249") format("svg");
         font-weight: 200;
         font-style: italic;
         }
         @font-face{
         font-family:"BT Futura W01_i3";
-        src:url("Fonts/80aeba20-efa4-4aea-9dff-fe3d6e9b25db.eot?#iefix") format("eot")
+        src:url("{{ site.baseurl }}/fonts/80aeba20-efa4-4aea-9dff-fe3d6e9b25db.eot?#iefix") format("eot")
         }
         @font-face{
         font-family:"BT Futura W01";
-        src:url("Fonts/80aeba20-efa4-4aea-9dff-fe3d6e9b25db.eot?#iefix");
-        src:url("Fonts/80aeba20-efa4-4aea-9dff-fe3d6e9b25db.eot?#iefix") format("eot"),url("Fonts/b25a4ccb-ae7a-4b19-85fc-f4ca88c5cd26.woff") format("woff"),url("Fonts/9ef2e85e-4a0e-4825-8f02-a2b708f8c6e7.ttf") format("truetype"),url("Fonts/af8eb763-2580-4c12-831c-6a1e9093df52.svg#af8eb763-2580-4c12-831c-6a1e9093df52") format("svg");
+        src:url("{{ site.baseurl }}/fonts/80aeba20-efa4-4aea-9dff-fe3d6e9b25db.eot?#iefix");
+        src:url("{{ site.baseurl }}/fonts/80aeba20-efa4-4aea-9dff-fe3d6e9b25db.eot?#iefix") format("eot"),url("{{ site.baseurl }}/fonts/b25a4ccb-ae7a-4b19-85fc-f4ca88c5cd26.woff") format("woff"),url("{{ site.baseurl }}/fonts/9ef2e85e-4a0e-4825-8f02-a2b708f8c6e7.ttf") format("truetype"),url("{{ site.baseurl }}/fonts/af8eb763-2580-4c12-831c-6a1e9093df52.svg#af8eb763-2580-4c12-831c-6a1e9093df52") format("svg");
         font-weight: 300;
         font-style: italic;
         }
         @font-face{
         font-family:"BT Futura W01_n4";
-        src:url("Fonts/0084b2cc-4014-4723-9304-027c2d0086cd.eot?#iefix") format("eot")
+        src:url("{{ site.baseurl }}/fonts/0084b2cc-4014-4723-9304-027c2d0086cd.eot?#iefix") format("eot")
         }
         @font-face{
         font-family:"BT Futura W01";
-        src:url("Fonts/0084b2cc-4014-4723-9304-027c2d0086cd.eot?#iefix");
-        src:url("Fonts/0084b2cc-4014-4723-9304-027c2d0086cd.eot?#iefix") format("eot"),url("Fonts/4603b58c-e92d-40e1-a670-1063cdca453b.woff") format("woff"),url("Fonts/67b08d64-f836-4b99-ac05-4b1c2e05a949.ttf") format("truetype"),url("Fonts/a5f12249-079e-42a0-95bc-27ad0164deb9.svg#a5f12249-079e-42a0-95bc-27ad0164deb9") format("svg");
+        src:url("{{ site.baseurl }}/fonts/0084b2cc-4014-4723-9304-027c2d0086cd.eot?#iefix");
+        src:url("{{ site.baseurl }}/fonts/0084b2cc-4014-4723-9304-027c2d0086cd.eot?#iefix") format("eot"),url("{{ site.baseurl }}/fonts/4603b58c-e92d-40e1-a670-1063cdca453b.woff") format("woff"),url("{{ site.baseurl }}/fonts/67b08d64-f836-4b99-ac05-4b1c2e05a949.ttf") format("truetype"),url("{{ site.baseurl }}/fonts/a5f12249-079e-42a0-95bc-27ad0164deb9.svg#a5f12249-079e-42a0-95bc-27ad0164deb9") format("svg");
         font-weight: 400;
         font-style: normal;
         }
         @font-face{
         font-family:"BT Futura W01_n1";
-        src:url("Fonts/bf74a9d0-0954-467f-abf2-269d642a34e6.eot?#iefix") format("eot")
+        src:url("{{ site.baseurl }}/fonts/bf74a9d0-0954-467f-abf2-269d642a34e6.eot?#iefix") format("eot")
         }
         @font-face{
         font-family:"BT Futura W01";
-        src:url("Fonts/bf74a9d0-0954-467f-abf2-269d642a34e6.eot?#iefix");
-        src:url("Fonts/bf74a9d0-0954-467f-abf2-269d642a34e6.eot?#iefix") format("eot"),url("Fonts/bb6e42eb-bc30-4c8a-b4ee-bdba1631f178.woff") format("woff"),url("Fonts/7c212380-c01a-48df-b253-606f78f6c4db.ttf") format("truetype"),url("Fonts/a585fe69-b36b-45e2-ab89-5f0fb2f702e4.svg#a585fe69-b36b-45e2-ab89-5f0fb2f702e4") format("svg");
+        src:url("{{ site.baseurl }}/fonts/bf74a9d0-0954-467f-abf2-269d642a34e6.eot?#iefix");
+        src:url("{{ site.baseurl }}/fonts/bf74a9d0-0954-467f-abf2-269d642a34e6.eot?#iefix") format("eot"),url("{{ site.baseurl }}/fonts/bb6e42eb-bc30-4c8a-b4ee-bdba1631f178.woff") format("woff"),url("{{ site.baseurl }}/fonts/7c212380-c01a-48df-b253-606f78f6c4db.ttf") format("truetype"),url("{{ site.baseurl }}/fonts/a585fe69-b36b-45e2-ab89-5f0fb2f702e4.svg#a585fe69-b36b-45e2-ab89-5f0fb2f702e4") format("svg");
         font-weight: 100;
         font-style: normal;
         }
         @font-face{
         font-family:"BT Futura W01_i1";
-        src:url("Fonts/4263004d-f836-4bd8-ac24-154d91379c6a.eot?#iefix") format("eot")
+        src:url("{{ site.baseurl }}/fonts/4263004d-f836-4bd8-ac24-154d91379c6a.eot?#iefix") format("eot")
         }
         @font-face{
         font-family:"BT Futura W01";
-        src:url("Fonts/4263004d-f836-4bd8-ac24-154d91379c6a.eot?#iefix");
-        src:url("Fonts/4263004d-f836-4bd8-ac24-154d91379c6a.eot?#iefix") format("eot"),url("Fonts/f3a29921-2598-4736-8d53-8245538e34d8.woff") format("woff"),url("Fonts/61367821-83d1-4768-9cd3-16a1d71e6e9a.ttf") format("truetype"),url("Fonts/469d02e0-4e47-4110-8061-1a8bd3e61cf9.svg#469d02e0-4e47-4110-8061-1a8bd3e61cf9") format("svg");
+        src:url("{{ site.baseurl }}/fonts/4263004d-f836-4bd8-ac24-154d91379c6a.eot?#iefix");
+        src:url("{{ site.baseurl }}/fonts/4263004d-f836-4bd8-ac24-154d91379c6a.eot?#iefix") format("eot"),url("{{ site.baseurl }}/fonts/f3a29921-2598-4736-8d53-8245538e34d8.woff") format("woff"),url("{{ site.baseurl }}/fonts/61367821-83d1-4768-9cd3-16a1d71e6e9a.ttf") format("truetype"),url("{{ site.baseurl }}/fonts/469d02e0-4e47-4110-8061-1a8bd3e61cf9.svg#469d02e0-4e47-4110-8061-1a8bd3e61cf9") format("svg");
         font-weight: 100;
         font-style: italic;
         }
     </style>
     <!-- CSS Styles -->
-    <link rel="stylesheet" type="text/css" href="css/build/global.css">
+    <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/build/global.css">
     <!-- Scripts -->
-    <script type="text/javascript" src="js/build/production.min.js"></script>
-    <script type="text/javascript" src="js/global.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/js/build/production.min.js"></script>
+    <script type="text/javascript" src="{{site.baseurl}}/js/global.js"></script>
 </head>
