--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <header class="navigation">
   <div class="navigation-wrapper">
-    <a href="/" id="logo">
+    <a href="{{site.baseurl}}" id="logo">
         <svg version="1.1" id="Layer_0_xA0_Image_1_" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
    x="0px" y="0px" width="136px" height="320px" viewBox="0 0 136 320" enable-background="new 0 0 136 320" xml:space="preserve">
 <path fill-rule="evenodd" clip-rule="evenodd" fill="#FFFFFF" d="M97.898,218.004c7.315-19.92,12.375-40.271,14.08-61.51
@@ -22,13 +22,13 @@
     <a href="" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
     <div class="nav">
       <ul id="navigation-menu">
-        <li class="nav-link"><a href="collection.html">Collection</a></li>
-        <li class="nav-link"><a href="stores.html">Stores</a></li>
+        <li class="nav-link"><a href="{{site.baseurl}}/collection.html">Collection</a></li>
+        <li class="nav-link"><a href="{{site.baseurl}}/stores.html">Stores</a></li>
         <li class="nav-link more"><a href="javascript:void(0)">About</a>
           <ul class="submenu">
-            <li><a href="story.html">Story</a></li>
-            <li><a href="bio.html">Bio</a></li>
-            <li><a href="press.html">Press</a></li>
+            <li><a href="{{site.baseurl}}/story.html">Story</a></li>
+            <li><a href="{{site.baseurl}}/bio.html">Bio</a></li>
+            <li><a href="{{site.baseurl}}/press.html">Press</a></li>
           </ul>
         </li>
       </ul>
