--- a/css/0-plugins/base/_variables.scss
+++ b/css/0-plugins/base/_variables.scss
@@ -57,4 +57,4 @@ $form-font-family: $base-font-family;
 
 
 // Custom variables
-$home-default-image: "/images/bracelet_blurred.jpg";
+$home-default-image: "http://ericgardner.info/lisaeisner/images/bracelet_blurred.jpg";
