Press section overhaul

--- a/assets/styles/_scss/base/_variables.scss
+++ b/assets/styles/_scss/base/_variables.scss
@@ -58,4 +58,4 @@ $form-font-family: $base-font-family;
 
 
 // Custom variables
-$home-default-image: "http://ericgardner.info/lisaeisner/images/bracelet_blurred.jpg";
+$home-default-image: "http://lisaeisnerjewelry.com/assets/img/bracelet_blurred.jpg";
