--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -29,7 +29,7 @@
           <ul class="submenu">
             <li><a href="{{site.baseurl}}/story.html">Story</a></li>
             <li><a href="{{site.baseurl}}/bio.html">Bio</a></li>
-            <li><a href="{{site.baseurl}}/press.html">Press</a></li>
+            <li><a href="{{site.baseurl}}/press">Press</a></li>
           </ul>
         </li>
       </ul>
