--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,8 @@
   </title>
   <meta name="description" content="{{ site.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="//use.typekit.net/ijp4dmq.js"></script>
+  <script>try{Typekit.load();}catch(e){}</script>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/assets/styles/main.css">
   <script type="text/javascript" src="{{site.baseurl}}/assets/js/main.js"></script>
