--- a/assets/styles/_scss/base/_variables.scss
+++ b/assets/styles/_scss/base/_variables.scss
@@ -1,11 +1,11 @@
 // Typography
-$futura: "BT Futura W01", Futura, Roboto, Helvetica, Arial, sans-serif;
+$futura: "futura-pt", Futura, Roboto, Helvetica, Arial, sans-serif;
 $sans-serif: $futura;
 $serif: $georgia;
 $base-font-family: $sans-serif;
 $header-font-family: $futura;
-$header-font-weight: 300;
-$body-font-weight: 300;
+$header-font-weight: 400;
+$body-font-weight: 400;
 
 // Sizes
 $base-font-size: 1em;
@@ -55,7 +55,3 @@ $form-box-shadow: inset 0 1px 3px rgba(0,0,0,0.06);
 $form-box-shadow-focus: $form-box-shadow, 0 0 5px rgba(darken($form-border-color-focus, 5), 0.7);
 $form-font-size: $base-font-size;
 $form-font-family: $base-font-family;
-
-
-// Custom variables
-$home-default-image: "http://lisaeisnerjewelry.com/assets/img/bracelet_blurred.jpg";
