--- a/_layouts/grid.html
+++ b/_layouts/grid.html
@@ -5,7 +5,7 @@
 {% include nav.html %}
 <div class="content">
   <article class="scene_element scene_element--fadein">
-    <h1>{{page.title}}</h1>
+    <h1 class="center">{{page.title}}</h1>
     {% if page.callout %}
       <h2>{{page.callout}}</h2>
     {% endif %}
